# ColorRevamp

./: CMakeLists.txt  README.md
src/: RemoveColor.h  Resource.aps  Resource.rc  main.cpp  resource.h
src/module/: ColorRevamp.cpp  ColorRevamp.ixx  Helper.ixx  choose_color.cpp  prepare_color.cpp  replacer.cpp
